--- a/roles/pinpoint-server/templates/pinpoint-collector/server.xml.j2
+++ b/roles/pinpoint-server/templates/pinpoint-collector/server.xml.j2
@@ -66,7 +66,7 @@
          APR (HTTP/AJP) Connector: /docs/apr.html
          Define a non-SSL/TLS HTTP/1.1 Connector on port 8080
     -->
-    <Connector port="{{ pinpoint_collector_tcp_port }}" protocol="HTTP/1.1"
+    <Connector port="9871" protocol="HTTP/1.1"
                connectionTimeout="20000"
                redirectPort="9443"
                compression="on"
